Fix homepage section spacing

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -134,6 +134,9 @@ main {
     text-decoration: none;
     color: inherit;
     max-width: 1200px;
+    &:not(:first-of-type) {
+      margin-top: 20px;
+    }
     &.cover {
       width: 100%;
       max-width: 1600px;
